moved the project to java 17 new attempt1